Setup a VkInstance for Vulkan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,26 @@ OPTION(SNUFF_BUILD_TEST "Build the test environment project 'snuffbox-test'")
 
 OPTION(SNUFF_JAVASCRIPT "Should V8 (JavaScript) be enabled for this build?")
 
+IF (SNUFF_USE_OGL AND SNUFF_OGL_VERSION MATCHES "vulkan")
+	ADD_DEFINITIONS("/DSNUFF_USE_VULKAN")
+	SET (SNUFF_RENDERER_NAME "Vulkan")
+ELSEIF (SNUFF_USE_OGL)
+	ADD_DEFINITIONS("/DSNUFF_USE_OGL")
+	SET (SNUFF_RENDERER_NAME "OpenGL")
+ELSEIF (NOT SNUFF_USE_OGL AND WIN32)
+	
+	IF (SNUFF_DIRECTX_VERSION MATCHES "11")
+		ADD_DEFINITIONS("/DSNUFF_USE_D3D11")
+	ELSEIF (SNUFF_DIRECTX_VERSION MATCHES "12")
+		ADD_DEFINITIONS("/DSNUFF_USE_D3D12")
+	ENDIF ()
+
+	SET (SNUFF_RENDERER_NAME "Direct3D ${SNUFF_DIRECTX_VERSION}")
+ENDIF ()
+
+SET (SNUFF_WINDOW_TITLE "Snuffbox (${SNUFF_RENDERER_NAME})")
+ADD_DEFINITIONS("/DSNUFF_WINDOW_TITLE=\"${SNUFF_WINDOW_TITLE}\"")
+
 IF (WIN32)
 	FOREACH(FLAG CMAKE_C_FLAGS
 	             CMAKE_C_FLAGS_DEBUG
@@ -64,11 +84,6 @@ ADD_DEFINITIONS("/DSNUFF_LOG_TIMEOUT=${SNUFF_LOG_TIMEOUT}")
 ADD_DEFINITIONS("/DSNUFF_LOG_BUFFERSIZE=${SNUFF_LOG_BUFFERSIZE}")
 ADD_DEFINITIONS("/DSNUFF_LOG_DEFAULT_MAXLINES=${SNUFF_LOG_DEFAULT_MAXLINES}")
 ADD_DEFINITIONS("/DSNUFF_RELOAD_AFTER=${SNUFF_RELOAD_AFTER}")
-
-IF (SNUFF_USE_OGL)
-	ADD_DEFINITIONS("/DSNUFF_USE_OGL")
-ENDIF ()
-
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 
 FIND_PACKAGE(EASTL REQUIRED)
