--- a/snuffbox-graphics/CMakeLists.txt
+++ b/snuffbox-graphics/CMakeLists.txt
@@ -13,6 +13,11 @@ FILE(GLOB SNUFF_GRAPHICS_SOURCES
 	"${SNUFF_GRAPHICS_PREFIX}/*.h"
 )
 
+FILE(GLOB SNUFF_GRAPHICS_PLATFORM
+	"platform/*.cc"
+	"platform/*.h"
+)
+
 IF (NOT SNUFF_USE_OGL AND WIN32)
 	FIND_PACKAGE(DirectX REQUIRED)
 
@@ -28,7 +33,13 @@ IF (SNUFF_USE_OGL AND SNUFF_GRAPHICS_PREFIX MATCHES "vulkan")
 	SET(GRAPHICS_LIBRARIES ${Vulkan_LIBRARIES})
 ENDIF ()
 
+SET (SNUFF_GRAPHICS_SOURCES
+	${SNUFF_GRAPHICS_SOURCES}
+	${SNUFF_GRAPHICS_PLATFORM}
+)
+
 SOURCE_GROUP("${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_GRAPHICS_SOURCES})
+SOURCE_GROUP("platform" FILES ${SNUFF_GRAPHICS_PLATFORM})
 
 ADD_LIBRARY(snuffbox-graphics ${SNUFF_GRAPHICS_SOURCES})
 TARGET_INCLUDE_DIRECTORIES(snuffbox-graphics PUBLIC ${GRAPHICS_INCLUDES})
