Continued on Vulkan, did a little refactor on the loading of extensions. The GLFWwindow is simply passed now as other renderers also have a dependency on this

--- a/snuffbox-graphics/CMakeLists.txt
+++ b/snuffbox-graphics/CMakeLists.txt
@@ -42,5 +42,6 @@ SOURCE_GROUP("${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_GRAPHICS_SOURCES})
 SOURCE_GROUP("platform" FILES ${SNUFF_GRAPHICS_PLATFORM})
 
 ADD_LIBRARY(snuffbox-graphics ${SNUFF_GRAPHICS_SOURCES})
-TARGET_INCLUDE_DIRECTORIES(snuffbox-graphics PUBLIC ${GRAPHICS_INCLUDES})
+TARGET_INCLUDE_DIRECTORIES(snuffbox-graphics PUBLIC ${GRAPHICS_INCLUDES} ${GLFW_INCLUDE})
 TARGET_LINK_LIBRARIES(snuffbox-graphics ${GRAPHICS_LIBRARIES})
+TARGET_LINK_LIBRARIES(snuffbox-graphics glfw ${GLFW_LIBRARIES})
