Created the window surface in Vulkan

--- a/snuffbox-graphics/CMakeLists.txt
+++ b/snuffbox-graphics/CMakeLists.txt
@@ -8,7 +8,7 @@ ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux" OR SNUFF_USE_OGL)
 	SET(SNUFF_GRAPHICS_PREFIX "${SNUFF_OGL_VERSION}")
 ENDIF ()
 
-FILE(GLOB SNUFF_GRAPHICS_SOURCES
+FILE(GLOB SNUFF_GRAPHICS_DEVICES
 	"${SNUFF_GRAPHICS_PREFIX}/*.cc"
 	"${SNUFF_GRAPHICS_PREFIX}/*.h"
 )
@@ -34,11 +34,11 @@ IF (SNUFF_USE_OGL AND SNUFF_GRAPHICS_PREFIX MATCHES "vulkan")
 ENDIF ()
 
 SET (SNUFF_GRAPHICS_SOURCES
-	${SNUFF_GRAPHICS_SOURCES}
+	${SNUFF_GRAPHICS_DEVICES}
 	${SNUFF_GRAPHICS_PLATFORM}
 )
 
-SOURCE_GROUP("${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_GRAPHICS_SOURCES})
+SOURCE_GROUP("${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_GRAPHICS_DEVICES})
 SOURCE_GROUP("platform" FILES ${SNUFF_GRAPHICS_PLATFORM})
 
 ADD_LIBRARY(snuffbox-graphics ${SNUFF_GRAPHICS_SOURCES})
